Fixed styles on how flashcards look. Fixed issue with div container being too small

--- a/flashcards/frontend/src/components/DeckSlider.css
+++ b/flashcards/frontend/src/components/DeckSlider.css
@@ -74,7 +74,7 @@ FIX Option 2 (call different thingys in the .css file depending on if cards or d
   padding: 6px 12px;
   font-size: 10px;
   margin: 12px 0 14px;
-  background: #e8f5e9;
+  background: #DDE4FF;
   width: fit-content;
   border-radius: 40px;
 }
