--- a/flashcards/frontend/src/globalPageModule.css
+++ b/flashcards/frontend/src/globalPageModule.css
@@ -1,7 +1,6 @@
 .global-page-container {
   overflow: auto;
   min-height: 100%;
-  height: 911px;
 }
 
 .global-page-headline {
